@@ -1,15 +1,23 @@
 package org.fourstack.business.mapper;
 
 import lombok.RequiredArgsConstructor;
+import org.fourstack.business.dao.service.BusinessEntityDataService;
+import org.fourstack.business.dao.service.OrgEntityDataService;
+import org.fourstack.business.entity.AiEntity;
+import org.fourstack.business.entity.AiOuMapEntity;
 import org.fourstack.business.entity.BusinessEntity;
 import org.fourstack.business.entity.MainOrgIdEntity;
+import org.fourstack.business.entity.OuEntity;
 import org.fourstack.business.enums.BooleanStatus;
 import org.fourstack.business.enums.OperationStatus;
+import org.fourstack.business.model.B2BAvailabilityResponse;
 import org.fourstack.business.model.B2BIdRegisterRequest;
 import org.fourstack.business.model.B2BIdRegisterResponse;
 import org.fourstack.business.model.BusinessDetails;
 import org.fourstack.business.model.BusinessRegisterRequest;
 import org.fourstack.business.model.BusinessRegisterResponse;
+import org.fourstack.business.model.CheckB2BIdRequest;
+import org.fourstack.business.model.CheckB2BIdResponse;
 import org.fourstack.business.model.CheckBusinessRequest;
 import org.fourstack.business.model.CheckBusinessResponse;
 import org.fourstack.business.model.CheckInstitute;
@@ -19,12 +27,16 @@ import org.fourstack.business.model.CommonResponseData;
 import org.fourstack.business.model.EntityInfo;
 import org.fourstack.business.model.Head;
 import org.fourstack.business.model.Institute;
-import org.fourstack.business.model.InstituteInfo;
 import org.fourstack.business.model.Response;
 import org.fourstack.business.model.SearchBusinessRequest;
 import org.fourstack.business.model.SearchBusinessResponse;
 import org.fourstack.business.model.SearchResponse;
-import org.fourstack.business.service.DbOperationService;
+import org.fourstack.business.model.backoffice.AiBackOfficeResponse;
+import org.fourstack.business.model.backoffice.AiDetails;
+import org.fourstack.business.model.backoffice.AiOuBackOfficeResponse;
+import org.fourstack.business.model.backoffice.AiOuMappingDetails;
+import org.fourstack.business.model.backoffice.OuBackOfficeResponse;
+import org.fourstack.business.model.backoffice.OuDetails;
 import org.fourstack.business.utils.BusinessUtil;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
@@ -40,7 +52,8 @@ import java.util.Set;
 @Component
 @RequiredArgsConstructor(onConstructor_ = @Lazy)
 public class ResponseMapper {
-    private final DbOperationService dbOperationService;
+    private final OrgEntityDataService orgEntityDataService;
+    private final BusinessEntityDataService businessDataService;
 
     public BusinessRegisterResponse generateSuccessBusinessResponse(BusinessRegisterRequest request) {
         BusinessRegisterResponse businessResponse = generateBusinessRegisterResponse(request);
@@ -131,21 +144,19 @@ public class ResponseMapper {
     public CheckInstituteResponse generateCheckInstituteResponse(CheckInstitute checkInstitute, boolean isBusinessExist,
                                                                  boolean isMultipleBusinessAllowed) {
         CheckInstituteResponse instituteResponse = new CheckInstituteResponse();
-        InstituteInfo instituteInfo = new InstituteInfo();
-        instituteInfo.setIsMultipleOrgAllowed(isMultipleBusinessAllowed ? BooleanStatus.YES : BooleanStatus.NO);
+        instituteResponse.setIsMultipleOrgAllowed(isMultipleBusinessAllowed ? BooleanStatus.YES : BooleanStatus.NO);
         if (isBusinessExist) {
-            instituteInfo.setIsBusinessExist(BooleanStatus.YES);
-            Map<String, BusinessEntity> businessEntityMap = dbOperationService.retrieveBusinessEntities(checkInstitute.getValue());
+            instituteResponse.setIsBusinessExist(BooleanStatus.YES);
+            Map<String, BusinessEntity> businessEntityMap = businessDataService.retrieveBusinessEntityMap(checkInstitute.getValue());
             List<BusinessDetails> businessDetails = businessEntityMap.values()
                     .stream().map(BusinessEntity::getInstitute)
                     .filter(Objects::nonNull)
                     .map(this::extractBusinessDetails)
                     .toList();
-            instituteInfo.setBusinessDetails(businessDetails);
+            instituteResponse.setInstituteDetails(businessDetails);
         } else {
-            instituteInfo.setIsBusinessExist(BooleanStatus.NO);
-            BusinessDetails businessDetails = getBusinessDetails(checkInstitute.getRegisteredName(), Collections.emptyList());
-            instituteInfo.setBusinessDetails(List.of(businessDetails));
+            instituteResponse.setIsBusinessExist(BooleanStatus.NO);
+            instituteResponse.setInstituteDetails(Collections.emptyList());
         }
         return instituteResponse;
     }
@@ -215,8 +226,39 @@ public class ResponseMapper {
         return response;
     }
 
+    public CheckB2BIdResponse generateFailureCheckB2BResponse(CheckB2BIdRequest request,
+                                                              String errorCode, String errorMsg, String errorField) {
+        CheckB2BIdResponse businessResponse = getCheckB2BIdResponse(request);
+        CommonResponseData commonData = businessResponse.getCommonData();
+        Head head = commonData.getHead();
+        Response response = generateFailureResponse(head.getMsgId(), errorCode, errorMsg, errorField);
+        head.setMsgId(BusinessUtil.generateAlphaNumericID(32, "MSG"));
+        commonData.setResponse(response);
+        return businessResponse;
+    }
+
+    public CheckB2BIdResponse generateSuccessCheckB2BResponse(CheckB2BIdRequest request,
+                                                              List<B2BAvailabilityResponse> b2bIdStatuses) {
+        CheckB2BIdResponse businessResponse = getCheckB2BIdResponse(request);
+        businessResponse.setB2bIdStatuses(b2bIdStatuses);
+        CommonResponseData commonData = businessResponse.getCommonData();
+        Head head = commonData.getHead();
+        Response response = generateSuccessResponse(head.getMsgId());
+        head.setMsgId(BusinessUtil.generateAlphaNumericID(32, "MSG"));
+        commonData.setResponse(response);
+        return businessResponse;
+    }
+
+    private CheckB2BIdResponse getCheckB2BIdResponse(CheckB2BIdRequest request) {
+        CheckB2BIdResponse businessResponse = new CheckB2BIdResponse();
+        businessResponse.setCommonData(constructCommonDataForResponse(request.getCommonData()));
+        businessResponse.setCheckB2BIds(request.getCheckB2BIds());
+        businessResponse.setAdditionalInfoList(request.getAdditionalInfoList());
+        return businessResponse;
+    }
+
     private BusinessDetails extractBusinessDetails(Institute institute) {
-        Optional<MainOrgIdEntity> orgIdEntity = dbOperationService.retrieveOrgIdEntity(institute.getObjectId());
+        Optional<MainOrgIdEntity> orgIdEntity = orgEntityDataService.retrieveOrgIdEntity(institute.getObjectId());
         if (orgIdEntity.isPresent()) {
             Set<String> b2BIds = BusinessUtil.extractAllB2BIds(orgIdEntity.get());
             return getBusinessDetails(orgIdEntity.get().getBusinessName(), b2BIds);
@@ -231,4 +273,75 @@ public class ResponseMapper {
         details.setB2bIds(b2bIds);
         return details;
     }
+
+    public AiBackOfficeResponse constructSuccessAiResponse(AiEntity entity) {
+        AiBackOfficeResponse response = new AiBackOfficeResponse();
+        response.setAiId(entity.getId());
+        response.setName(entity.getName());
+        response.setSubscriberId(entity.getSubscriberId());
+        response.setStatus(entity.getStatus().name());
+        response.setType(entity.getAiType().name());
+        response.setCreatedTimeStamp(entity.getCreatedTimeStamp());
+        response.setLastModifiedTimeStamp(entity.getLastModifiedTimeStamp());
+        response.setResponse(generateSuccessResponse(null));
+        return response;
+    }
+
+    public AiBackOfficeResponse constructFailureAiResponse(AiDetails aiDetails, String errorCode,
+                                                           String errorMsg, String fieldName) {
+        AiBackOfficeResponse response = new AiBackOfficeResponse();
+        response.setAiId(aiDetails.getAiId());
+        response.setName(aiDetails.getName());
+        response.setSubscriberId(aiDetails.getSubscriberId());
+        response.setStatus(aiDetails.getStatus());
+        response.setType(aiDetails.getType());
+        response.setResponse(generateFailureResponse(null, errorCode, errorMsg, fieldName));
+        return response;
+    }
+
+    public OuBackOfficeResponse constructSuccessOuResponse(OuEntity entity) {
+        OuBackOfficeResponse response = new OuBackOfficeResponse();
+        response.setOuId(entity.getId());
+        response.setName(entity.getName());
+        response.setStatus(entity.getStatus().name());
+        response.setCreatedTimeStamp(entity.getCreatedTimeStamp());
+        response.setLastModifiedTimeStamp(entity.getLastModifiedTimeStamp());
+        response.setResponse(generateSuccessResponse(null));
+        return response;
+    }
+
+    public OuBackOfficeResponse constructFailureOuResponse(OuDetails ouDetails, String errorCode,
+                                                           String errorMsg, String fieldName) {
+        OuBackOfficeResponse response = new OuBackOfficeResponse();
+        response.setOuId(ouDetails.getOuId());
+        response.setName(ouDetails.getName());
+        response.setStatus(ouDetails.getStatus());
+        response.setResponse(generateFailureResponse(null, errorCode, errorMsg, fieldName));
+        return response;
+    }
+
+    public AiOuBackOfficeResponse constructSuccessAiOuResponse(AiOuMapEntity entity) {
+        AiOuBackOfficeResponse response = new AiOuBackOfficeResponse();
+        response.setAiId(entity.getAiId());
+        response.setOuId(entity.getOuId());
+        response.setWebhookUrl(entity.getWebhookUrl());
+        response.setEncryptionDetails(entity.getEncryptionDetails());
+        response.setStatus(entity.getStatus().name());
+        response.setCreatedTimeStamp(entity.getCreatedTimeStamp());
+        response.setLastModifiedTimeStamp(entity.getLastModifiedTimeStamp());
+        return response;
+    }
+
+    public AiOuBackOfficeResponse constructFailureAiOuResponse(AiOuMappingDetails details, String errorCode,
+                                                               String errorMsg, String fieldName) {
+        AiOuBackOfficeResponse response = new AiOuBackOfficeResponse();
+        response.setAiId(details.getAiId());
+        response.setOuId(details.getOuId());
+        response.setWebhookUrl(details.getWebhookUrl());
+        response.setEncryptionDetails(details.getEncryptionDetails());
+        response.setStatus(details.getStatus());
+        response.setResponse(generateFailureResponse(null, errorCode, errorMsg, fieldName));
+        return response;
+    }
+
 }
